--- a/APBD-06/appsettings.json
+++ b/APBD-06/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Example;User Id=SA;Password=yourStrong(!)Password;"
+  },
   "AllowedHosts": "*"
 }
+
